--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-helmet": "^5.2.0",
     "react-masonry-component": "^6.2.1",
     "react-slick": "^0.25.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
     "react-transition-group": "^4.4.1"
   },
   "keywords": [
