--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-masonry-component": "^6.2.1",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1",
+    "framer-motion": "^2.6.13",
     "react-transition-group": "^4.4.1"
   },
   "keywords": [
